Linux only cluster using azure npm/Case-11-Allow-egress-to-some-pods-in-a-namespace/Serverpods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linux-webserver-pod
  namespace: default
  labels:
    app: webserver
spec:
  containers:
    - name: linux-webserver-pod
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: linux-backend-pod
  namespace: development
  labels:
    app: backend
spec:
  containers:
    - name: linux-backend-pod
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: linux-default-backend-pod
  namespace: default
  labels:
    app: backend
spec:
  containers:
    - name: linux-default-backend-pod
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80

---
