Linux only cluster using azure npm/Case-11-Allow-egress-to-some-pods-in-a-namespace/Networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: limit-egress-to-pods-in-a-namespace
  namespace: development
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: frontend
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              purpose: default
          podSelector:
            matchLabels:
              app: backend
